Se crean conexiones a las DB, consultas, se crea el Thread, se genera el .JAR

--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,7 @@
           <manifest>
             <addClasspath>true</addClasspath>
             <classpathPrefix>lib/</classpathPrefix>
-            <mainClass>prueba_sms.Main</mainClass>
+            <mainClass>sms_ApiRest</mainClass>
           </manifest>
         </archive>
       </configuration>
