Se actualiza el .jar, pueba exitosa desde la línea de comandos

--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,7 @@
           <manifest>
             <addClasspath>true</addClasspath>
             <classpathPrefix>lib/</classpathPrefix>
-            <mainClass>sms_ApiRest</mainClass>
+            <mainClass>sms_ApiRest.app</mainClass>
           </manifest>
         </archive>
       </configuration>
